<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="3"
                android:src="@drawable/pnp"></ImageView>

            <TextView
                android:id="@+id/txtJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/vbold"
                android:gravity="center"
                android:src="@drawable/pnp"
                android:text="@string/data_pribadi_satu_sd_30"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBlack" />
        <TableLayout
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:id="@+id/IdPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtIdPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/IdUser"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_user"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtIdUser"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_user"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/namaPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtNamaPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/jk"
                    android:fontFamily="@font/vregular"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtJk"
                    android:fontFamily="@font/vregular"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/nisn"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nisn"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtNisn"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nisn"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/nik"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nik"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtNik"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nik"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/tempatLahir"
                    android:fontFamily="@font/vregular"
                    android:text="@string/tempat_lahir"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtTempatLahir"
                    android:fontFamily="@font/vregular"
                    android:text="@string/tempat_lahir"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/tglLahir"
                    android:fontFamily="@font/vregular"
                    android:text="@string/tgl_lahir"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtTglLahir"
                    android:fontFamily="@font/vregular"
                    android:text="@string/tgl_lahir"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/fotoNisn"
                    android:fontFamily="@font/vregular"
                    android:text="@string/foto_nisn"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <ImageView
                    android:id="@+id/imgFotoNisn"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="left"
                    android:src="@drawable/gambar"></ImageView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/fotoNik"
                    android:fontFamily="@font/vregular"
                    android:text="@string/foto_nik"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <ImageView
                    android:id="@+id/imgFotoNik"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="left"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/gambar"></ImageView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>