<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="3"
                android:src="@drawable/pnp"></ImageView>

            <TextView
                android:id="@+id/txtJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/vbold"
                android:gravity="center"
                android:src="@drawable/pnp"
                android:text="@string/data_pribadi_tiga_sd_30"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"></TextView>
        </LinearLayout>
        <View
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorBlack" />
        <TableLayout
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:id="@+id/idPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtIdPribadi"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_pribadi"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/idUser"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_user"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtIdUser"
                    android:fontFamily="@font/vregular"
                    android:text="@string/id_user"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/namaDusun"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_dusun"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtNamaDusun"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_dusun"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/namaKel"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_kelurahan"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtNamaKel"
                    android:fontFamily="@font/vregular"
                    android:text="@string/nama_kelurahan"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/kec"
                    android:fontFamily="@font/vregular"
                    android:text="@string/kecamatan"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtKec"
                    android:fontFamily="@font/vregular"
                    android:text="@string/kecamatan"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/kodePos"
                    android:fontFamily="@font/vregular"
                    android:text="@string/kode_pos"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtKodePos"
                    android:fontFamily="@font/vregular"
                    android:text="@string/kode_pos"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/lintang"
                    android:fontFamily="@font/vregular"
                    android:text="@string/lintang"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtLintang"
                    android:fontFamily="@font/vregular"
                    android:text="@string/lintang"
                    android:textColor="@color/colorBlack"></TextView>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/bujur"
                    android:fontFamily="@font/vregular"
                    android:text="@string/bujur"
                    android:textColor="@color/colorBlack"></TextView>
                <TextView
                    android:text=" : "></TextView>

                <TextView
                    android:id="@+id/txtBujur"
                    android:fontFamily="@font/vregular"
                    android:text="@string/bujur"
                    android:textColor="@color/colorBlack"
                    android:layout_marginBottom="16dp"></TextView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>